--- a/middle_control/src/main/res/layout/activity_main.xml
+++ b/middle_control/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="5dp">
 
     <View
         android:id="@+id/tv_view"
@@ -17,9 +18,10 @@
         <Button
             android:id="@+id/btn_rectangle"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:layout_height="match_parent"
-            android:text="直角"/>
+            android:text="直角"
+            android:background="@drawable/shape_rectangle"/>
 
         <Button
             android:id="@+id/btn_oval"
