--- a/middle_control/src/main/res/values/themes.xml
+++ b/middle_control/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar.Bridge">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">#dd00dd</item>-->
+         <item name="colorPrimary">#448ef7</item>
     </style>
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
