--- a/middle_control/src/main/res/layout/activity_forget_password.xml
+++ b/middle_control/src/main/res/layout/activity_forget_password.xml
@@ -1,10 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgetPasswordActivity">
+    android:orientation="vertical"
+    android:padding="8dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_layout_height"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="输入新密码："
+            android:textSize="@dimen/common_font_size" />
+
+        <EditText
+            android:id="@+id/edit_new_password"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/edit_text_selector"
+            android:hint="请输入新密码"
+            android:maxLength="6"
+            android:inputType="numberPassword"
+            android:textColorHint="#ccc" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_layout_height"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="确认新密码："
+            android:textSize="@dimen/common_font_size" />
+
+        <EditText
+            android:id="@+id/edit_two_new_password"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/edit_text_selector"
+            android:hint="请再次输入新密码"
+            android:inputType="numberPassword"
+            android:maxLength="6"
+            android:textColorHint="#ccc" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_layout_height"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/verifycode2"
+            android:textSize="@dimen/common_font_size" />
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <EditText
+                android:id="@+id/yzm"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/edit_text_selector"
+                android:hint="请输入验证码"
+                android:maxLength="6"
+                android:inputType="number"
+                android:textColorHint="#ccc" />
+
+            <TextView
+                android:id="@+id/get_yzm"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:background="#ccc"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="获取验证码"
+                android:textSize="@dimen/common_font_size" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_layout_height"
+        android:background="@drawable/btn_style"
+        android:text="确 定"
+        android:textColor="#fff"
+        android:textSize="@dimen/button_font_size" />
+</LinearLayout>
