--- a/data_storage/src/main/res/layout/activity_file_writer.xml
+++ b/data_storage/src/main/res/layout/activity_file_writer.xml
@@ -112,6 +112,12 @@
         android:text="读取"
         android:layout_marginBottom="10dp"/>
 
+    <Button
+        android:id="@+id/global"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="保存全局"/>
+
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
