--- a/data_storage/src/main/res/layout/title_shopping.xml
+++ b/data_storage/src/main/res/layout/title_shopping.xml
@@ -41,6 +41,7 @@
             android:layout_marginRight="5dp"
             android:background="@drawable/shape_oval_red"
             android:gravity="center"
-            android:text="0" />
+            android:text="0"
+            android:textColor="#fff"/>
     </RelativeLayout>
 </LinearLayout>
