下拉框结合key value

--- a/advanced_control/src/main/res/layout/item_icon_select.xml
+++ b/advanced_control/src/main/res/layout/item_icon_select.xml
@@ -6,12 +6,13 @@
     tools:context=".SpinnerIconActivity"
     android:background="@drawable/bottom_border">
 
-    <ImageView
+    <TextView
         android:id="@+id/icon_img"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="50dp"
-        android:src="@drawable/diqiu"/>
+        android:src="@drawable/diqiu"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/icon_tv"
