--- a/advanced_control/src/main/res/layout/activity_grid_view.xml
+++ b/advanced_control/src/main/res/layout/activity_grid_view.xml
@@ -4,12 +4,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListViewFocusActivity"
-    android:orientation="vertical">
+    tools:context=".GridViewActivity">
 
-    <ListView
-        android:id="@+id/listView"
+    <GridView
+        android:id="@+id/gridView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="wrap_content"
+        android:numColumns="2"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="4dp"
+        android:listSelector="@color/transparent"/>
 </LinearLayout>
