实现启动引导页

--- a/advanced_control/src/main/res/values/colors.xml
+++ b/advanced_control/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="list_select">#ad8832</color>
+    <color name="primary">#6089ef</color>
 </resources>
