--- a/advanced_control/src/main/res/layout/activity_fragment_static.xml
+++ b/advanced_control/src/main/res/layout/activity_fragment_static.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <fragment
-        android:name="vip.dengwj.StaticFragment"
+        android:name="vip.dengwj.fragment.StaticFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
