--- a/advanced_control/src/main/res/layout/activity_bill_list.xml
+++ b/advanced_control/src/main/res/layout/activity_bill_list.xml
@@ -41,5 +41,13 @@
         </LinearLayout>
 
     <!--    翻页-->
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager_month"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <androidx.viewpager.widget.PagerTabStrip
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </androidx.viewpager.widget.ViewPager>
     </LinearLayout>
 </LinearLayout>
