--- a/advanced_control/src/main/res/layout/nav_bar.xml
+++ b/advanced_control/src/main/res/layout/nav_bar.xml
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:text="请填写账单"
         android:textColor="#f1f1f1"
-        android:textSize="22sp" />
+        android:textSize="17sp" />
 
     <TextView
         android:id="@+id/navbar_right"
@@ -33,6 +33,5 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:textColor="#eee"
-        android:text="账单列表"
-        android:textSize="20sp"/>
+        android:text="账单列表"/>
 </LinearLayout>
