--- a/advanced_control/src/main/res/layout/nav_bar.xml
+++ b/advanced_control/src/main/res/layout/nav_bar.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="#597fdd"
+    android:background="#6988e8"
     android:padding="5dp">
 
     <LinearLayout
