--- a/advanced_control/src/main/res/layout/activity_bill_list.xml
+++ b/advanced_control/src/main/res/layout/activity_bill_list.xml
@@ -44,7 +44,8 @@
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/view_pager_month"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp"
+            android:layout_weight="1">
             <androidx.viewpager.widget.PagerTabStrip
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
