--- a/advanced_control/src/main/res/layout/activity_pocket_book.xml
+++ b/advanced_control/src/main/res/layout/activity_pocket_book.xml
@@ -27,16 +27,14 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="账单日期："
-                android:textColor="#000"
-                android:textSize="17sp" />
+                android:textColor="#000" />
 
             <TextView
                 android:id="@+id/date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="17sp" />
+                android:gravity="center" />
         </LinearLayout>
 
         <!--账单类型-->
@@ -50,8 +48,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="账单类型："
-                android:textColor="#000"
-                android:textSize="17sp" />
+                android:textColor="#000" />
 
             <RadioGroup
                 android:id="@+id/bill_type"
@@ -87,8 +84,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="事项说明："
-                android:textColor="#000"
-                android:textSize="17sp" />
+                android:textColor="#000" />
 
             <EditText
                 android:id="@+id/desc"
@@ -112,8 +108,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="        金额："
-                android:textColor="#000"
-                android:textSize="17sp" />
+                android:textColor="#000" />
 
             <EditText
                 android:id="@+id/amount"
@@ -133,7 +128,6 @@
             android:layout_height="wrap_content"
             android:background="@drawable/btn_style"
             android:text="保存"
-            android:textColor="#f1f1f1"
-            android:textSize="20sp" />
+            android:textColor="#f1f1f1" />
     </LinearLayout>
 </LinearLayout>
