--- a/custom_control/src/main/res/layout/input_number_view.xml
+++ b/custom_control/src/main/res/layout/input_number_view.xml
@@ -2,22 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/input_number_view_l"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:layout_height="40dp">
 
-    <Button
+    <TextView
         android:id="@+id/dec"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="-" />
+        android:layout_width="80dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/shape_inp_left"
+        android:text="-"
+        android:textSize="30sp"
+        android:gravity="center"/>
 
     <EditText
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/shape_inp_center"
+        android:gravity="center"
+        android:focusable="false"
         android:text="0"/>
 
-    <Button
+    <TextView
         android:id="@+id/add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+" />
+        android:layout_width="80dp"
+        android:layout_height="match_parent"
+        android:text="+"
+        android:background="@drawable/shape_inp_right"
+        android:gravity="center"
+        android:textSize="18sp"/>
 </LinearLayout>
