--- a/custom_control/src/main/res/layout/input_number_view.xml
+++ b/custom_control/src/main/res/layout/input_number_view.xml
@@ -10,12 +10,13 @@
         android:id="@+id/dec"
         android:layout_width="80dp"
         android:layout_height="match_parent"
-        android:background="@drawable/shape_inp_left"
+        android:background="@drawable/selector_inp_left"
         android:text="-"
         android:textSize="30sp"
         android:gravity="center"/>
 
     <EditText
+        android:id="@+id/edit"
         android:layout_width="80dp"
         android:layout_height="match_parent"
         android:background="@drawable/shape_inp_center"
@@ -28,7 +29,7 @@
         android:layout_width="80dp"
         android:layout_height="match_parent"
         android:text="+"
-        android:background="@drawable/shape_inp_right"
+        android:background="@drawable/selector_inp_right"
         android:gravity="center"
         android:textSize="18sp"/>
 </LinearLayout>
