--- a/custom_control/src/main/res/layout/activity_main.xml
+++ b/custom_control/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     android:gravity="center">
 
     <vip.dengwj.custom_control.customView.InputNumberView
+        android:id="@+id/input_number_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
