--- a/custom_control/src/main/res/layout/input_number_view.xml
+++ b/custom_control/src/main/res/layout/input_number_view.xml
@@ -21,8 +21,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/shape_inp_center"
         android:gravity="center"
-        android:focusable="false"
-        android:text="0"/>
+        android:focusable="false"/>
 
     <TextView
         android:id="@+id/add"
