--- a/custom_control/src/main/res/layout/activity_main.xml
+++ b/custom_control/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:background="#96a9e2"
     android:gravity="center">
 
-    <vip.dengwj.custom_control.customView.InputNumberView
+    <vip.dengwj.custom_control.customView.inputNumberView.InputNumberView
         android:id="@+id/input_number_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
