--- a/custom_control/src/main/res/layout/activity_login_page.xml
+++ b/custom_control/src/main/res/layout/activity_login_page.xml
@@ -7,6 +7,7 @@
     tools:context=".LoginPageActivity">
 
     <vip.dengwj.custom_control.customView.loginPage.LoginPageView
+        android:id="@+id/login_page_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
