--- a/custom_control/src/main/res/layout/login_page_view.xml
+++ b/custom_control/src/main/res/layout/login_page_view.xml
@@ -42,6 +42,7 @@
                 android:drawableLeft="@mipmap/phone"
                 android:drawablePadding="10dp"
                 android:hint="请输入11位手机号码"
+                android:inputType="number"
                 android:maxLength="11"
                 android:paddingLeft="16dp"
                 android:paddingTop="12dp"
@@ -66,6 +67,7 @@
                     android:drawableLeft="@mipmap/password"
                     android:drawablePadding="10dp"
                     android:hint="请输入验证码"
+                    android:inputType="number"
                     android:maxLength="6"
                     android:paddingLeft="16dp"
                     android:paddingTop="12dp"
@@ -113,7 +115,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/shape_login"
+            android:background="@drawable/selector_confirm"
+            android:enabled="false"
             android:gravity="center"
             android:padding="14dp"
             android:text="确定"
