--- a/custom_control/src/main/res/values/attrs.xml
+++ b/custom_control/src/main/res/values/attrs.xml
@@ -10,4 +10,8 @@
         <attr name="btnBackground" format="reference" />
         <attr name="valueSize" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="LoginPageView">
+        <attr name="time" format="integer" />
+    </declare-styleable>
 </resources>
