--- a/custom_control/src/main/res/layout/activity_login_page.xml
+++ b/custom_control/src/main/res/layout/activity_login_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:pumu="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,5 +10,6 @@
     <vip.dengwj.custom_control.customView.loginPage.LoginPageView
         android:id="@+id/login_page_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        pumu:time="10000"/>
 </LinearLayout>
