--- a/custom_control/src/main/res/values/attrs.xml
+++ b/custom_control/src/main/res/values/attrs.xml
@@ -14,4 +14,8 @@
     <declare-styleable name="LoginPageView">
         <attr name="time" format="integer" />
     </declare-styleable>
+
+    <declare-styleable name="Carousel">
+
+    </declare-styleable>
 </resources>
