--- a/custom_control/src/main/res/layout/activity_keypad.xml
+++ b/custom_control/src/main/res/layout/activity_keypad.xml
@@ -7,16 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".KeypadActivity">
 
-    <!--<vip.dengwj.custom_control.customView.keypad.KeypadView-->
-    <!--    android:layout_width="wrap_content"-->
-    <!--    android:layout_height="wrap_content"-->
-    <!--    app:numberSize="20sp"/>-->
-
-    <TextView
-        android:id="@+id/test"
+    <vip.dengwj.custom_control.customView.keypad.KeypadView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="20sp"
-        android:text="测试"
-        android:textColor="#fff"/>
+        app:numberSize="20sp"/>
+
+    <!--<TextView-->
+    <!--    android:id="@+id/test"-->
+    <!--    android:layout_width="wrap_content"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:padding="20sp"-->
+    <!--    android:text="测试"-->
+    <!--    android:textColor="#fff"/>-->
 </LinearLayout>
