--- a/custom_control/src/main/res/layout/activity_keypad.xml
+++ b/custom_control/src/main/res/layout/activity_keypad.xml
@@ -8,8 +8,8 @@
     tools:context=".KeypadActivity">
 
     <vip.dengwj.custom_control.customView.keypad.KeypadView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="400dp"
         app:numberSize="20sp"/>
 
     <!--<TextView-->
