--- a/custom_control/src/main/res/layout/activity_keypad.xml
+++ b/custom_control/src/main/res/layout/activity_keypad.xml
@@ -11,6 +11,7 @@
         android:layout_width="300dp"
         android:layout_height="400dp"
         app:numberSize="20sp"
+        android:background="#00ffaa"
         app:itemMargin="8dp"/>
 
     <!--<TextView-->
