--- a/custom_control/src/main/res/layout/activity_slide_menu.xml
+++ b/custom_control/src/main/res/layout/activity_slide_menu.xml
@@ -16,9 +16,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#ff00"
+            android:background="#eee"
             android:text="群通知"
             android:gravity="center"
-            android:textColor="#fff"/>
+            android:textColor="#000"/>
     </vip.dengwj.custom_control.customView.slide.SlideMenuView>
 </LinearLayout>
