--- a/custom_control/src/main/res/values/colors.xml
+++ b/custom_control/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
 
     <color name="numberColor">#383838</color>
     <color name="itemPressColor">#666666</color>
+
+    <color name="secondDefaultColor">#ff0000</color>
+    <color name="minDefaultColor">#00ff00</color>
+    <color name="hourDefaultColor">#0000ff</color>
+    <color name="scaleDefaultColor">#ffffff</color>
 </resources>
