--- a/custom_control/src/main/res/layout/activity_watch_face.xml
+++ b/custom_control/src/main/res/layout/activity_watch_face.xml
@@ -8,6 +8,7 @@
     tools:context=".WatchFaceActivity">
 
     <vip.dengwj.custom_control.customView.watchface.WatchFace
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"/>
 </LinearLayout>
