使用 RecyclerView 实现 ListView 效果

--- a/advanced_control/src/main/res/layout/activity_recycler_view.xml
+++ b/advanced_control/src/main/res/layout/activity_recycler_view.xml
@@ -5,10 +5,12 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecyclerViewActivity">
+    tools:context=".RecyclerViewActivity"
+    android:orientation="vertical">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="你好"/>
+        android:layout_height="wrap_content"
+        android:background="#e1e1e1"/>
 </LinearLayout>
