--- a/advanced_control/src/main/res/layout/item_recycler.xml
+++ b/advanced_control/src/main/res/layout/item_recycler.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_recycler"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:background="#fff">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:text="你好"/>
+        app:cardUseCompatPadding="true"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:text="你好"/>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
