--- a/advanced_control/src/main/res/layout/activity_recycler_view.xml
+++ b/advanced_control/src/main/res/layout/activity_recycler_view.xml
@@ -12,5 +12,5 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#e1e1e1"/>
+        android:background="#f1f1f1"/>
 </LinearLayout>
