--- a/network/src/main/res/layout/activity_okhttp.xml
+++ b/network/src/main/res/layout/activity_okhttp.xml
@@ -5,11 +5,18 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OkhttpActivity">
+    tools:context=".OkhttpActivity"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/get_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Get Request"/>
+
+    <Button
+        android:id="@+id/post_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Post Request"/>
 </LinearLayout>
