--- a/network/src/main/res/layout/activity_okhttp.xml
+++ b/network/src/main/res/layout/activity_okhttp.xml
@@ -19,4 +19,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Post Request"/>
+
+    <Button
+        android:id="@+id/post_file_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Post File Request"/>
 </LinearLayout>
