--- a/network/src/main/res/layout/activity_retrofit.xml
+++ b/network/src/main/res/layout/activity_retrofit.xml
@@ -13,4 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Get Request"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
