--- a/network/src/main/res/layout/activity_retrofit.xml
+++ b/network/src/main/res/layout/activity_retrofit.xml
@@ -14,6 +14,12 @@
         android:layout_height="wrap_content"
         android:text="Get Request"/>
 
+    <Button
+        android:id="@+id/get_param_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Get Param Request"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
