--- a/service/src/main/res/layout/activity_main.xml
+++ b/service/src/main/res/layout/activity_main.xml
@@ -19,4 +19,22 @@
         android:text="停止服务"
         android:onClick="handleStopService"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="绑定服务"
+        android:onClick="handleBindService"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="解绑服务"
+        android:onClick="handleUnbindService"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="调用服务内部方法"
+        android:onClick="handleServiceInnerMethod"/>
+
 </LinearLayout>
