--- a/service/src/main/res/layout/include_normal_user.xml
+++ b/service/src/main/res/layout/include_normal_user.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".BankActivity">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="handleNormalUserClick"
-        android:text="普通用户"/>
+        android:onClick="handleSaveMoneyClick"
+        android:text="存钱"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="handleBankWorkerClick"
-        android:text="银行工作人员"/>
+        android:onClick="handleGetMoneyClick"
+        android:text="取钱"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="handleBankBossClick"
-        android:text="银行行长"/>
+        android:onClick="handleLoanMoneyClick"
+        android:text="贷款"/>
 </LinearLayout>
