--- a/service/src/main/res/layout/activity_player.xml
+++ b/service/src/main/res/layout/activity_player.xml
@@ -30,6 +30,6 @@
             android:id="@+id/close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="关闭" />
+            android:text="停止" />
     </LinearLayout>
 </LinearLayout>
