--- a/service/src/main/res/layout/activity_player.xml
+++ b/service/src/main/res/layout/activity_player.xml
@@ -11,7 +11,8 @@
         android:id="@+id/seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:max="100" />
 
     <LinearLayout
         android:layout_width="match_parent"
